--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,10 @@
 
     <title>React App</title>
 
+    <!-- For jQuery -->
+    <script src="index.jsx"></script>
+    <!-- other scripting files -->
+
     <!-- Bootstrap 5 -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
