--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
     <!-- Font Awesome -->
     <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet" />
 
-    <script src="https://www.paypal.com/sdk/js?client-id=AX1I0Rd45ExcqiNA2Zfa_RGZXsNLLG__6jiB1Dq1pKTCtLxjB1AIUM9fdnwcNyrqn09kSveTyWpGptCr" data-namespace="paypal_sdk"></script>
+    <!-- <script src="https://www.paypal.com/sdk/js?client-id=AX1I0Rd45ExcqiNA2Zfa_RGZXsNLLG__6jiB1Dq1pKTCtLxjB1AIUM9fdnwcNyrqn09kSveTyWpGptCr" data-namespace="paypal_sdk"></script> -->
 
   </head>
   <body>
