--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
     <title>React App</title>
 
     <!-- For jQuery -->
-    <script src="index.jsx"></script>
+    <script type="text/babel" src="index.jsx"></script>
     <!-- other scripting files -->
 
     <!-- Bootstrap 5 -->
